--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,6 @@
     "version": "0.0.0.1",
     "chrome_url_overrides": {
         "newtab": "./index.html"
-    }
+    },
+    "permissions": ["storage"]
 }
